--- a/Task_Manager/Task_Manager.csproj
+++ b/Task_Manager/Task_Manager.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.7.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Repositories\" />
+    </ItemGroup>
+
 </Project>
