--- a/Task_Manager/Task_Manager.csproj
+++ b/Task_Manager/Task_Manager.csproj
@@ -7,6 +7,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.6.24327.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-preview.6.24327.4" />
       <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.7.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.7.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.7.0" />
