--- a/Task_Manager/Task_Manager.csproj
+++ b/Task_Manager/Task_Manager.csproj
@@ -8,7 +8,9 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0-preview.6.24327.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0-preview.6.24327.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0-preview.6.24327.4" />
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.7.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.7.0" />
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.7.0" />
