--- a/Task_Manager/appsettings.json
+++ b/Task_Manager/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=applicationdb;Trusted_Connection=True;"
+    "DefaultConnection": "Data Source=applicationdb.sqlite"
   },
   "Logging": {
     "LogLevel": {
